Visibility fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -58,7 +58,7 @@ body {
   border-radius: 10px;
   max-width: 1070px;
   margin: -40px auto;
-  height: 500px;
+  height: 700px;
 
   h1 {
     padding-top: 20px;
@@ -70,15 +70,4 @@ body {
   padding-top: 10px;
   display: flex; 
   flex-wrap: wrap;
-}
-
-.footer {
-  text-align: center;
-  font-family: verdana;
-  color: #73453e;
-
-  h4 {
-    margin: 40px;
-    padding-bottom: 10px;
-  }
 }
